# operator-x02-ide

./: .gitignore  CHANGELOG.md  README.md  VERSION.md  _bmSmartRestore_snippet.ts  android_commands.rs  android_index.ts  apply_card_patch.py  autoFormatErrors.ts  backup_layout.ts_20260320_191633.ts  backup_layout.ts_20260320_195354.ts  backup_layout2_20260320_002255.ts  backup_layout_20260320_000918.ts  backup_layout_alias_20260320_104628.ts  backup_layout_anim_20260320_010056.ts  backup_layout_async_20260320_105011.ts  backup_layout_clean_20260320_031513.ts  backup_layout_cwd_20260320_103033.ts  backup_layout_dup_20260320_030934.ts  backup_layout_ide_20260320_030054.ts  backup_layout_ps_20260320_005424.ts  backup_welcome2_20260319_233411.ts  backup_welcome_20260319_232211.ts  cleanup.ts  contextMenuOptionB.ts  diagnose_menu_click.ps1  directEventHandlers.ts  do_patch.py  do_patch_modal.py  find_anchor.ps1  find_anchor2.ps1  find_anchor3.ps1  find_contextmenu.ps1  fix1_read_bypass.ps1  fix1_read_bypass_v2.ps1  fix2_webui_dom.ps1  fix3_token_filter.ps1  fix_af.py  fix_aiChatFileIntegration_docguard.ps1  fix_ai_status_dialog_autodismiss.ps1  (+79 more)
.github/: FUNDING.yml
fix_backups_20260319_221449/: tabManager.ts
fix_backups_r3_20260319_222213/: explorerSearch.ts  svnUIEnhanced.ts
fix_errors2_20260319_230229/: assistantUI.ts  buildSystemUI.ts
fix_errors_20260319_225954/: assistantUI.ts  main.ts
fix_remaining_20260319_225601/: explorerManager.ts  tabManager.ts
fix_startup_backups_20260319_223324/: main.ts  modernModal.ts
src/: App.jsx  _tree.txt  appleInputArea.css  assistantStyles.ts  autoSaveConfirmation.ts  autoSparklesIcon.ts  autonomousCoding.ts  autonomousCore.ts  autonomousMultiFile.ts  build_operator_x02.bat  calibrationIntegration.ts  calibrationUI.ts  cemReloadFix.ts  chatFileDropHandler.ts  chatLoadingFix.ts  chatPagination.ts  chatPanelResizer.ts  cleanup.ts  contextMenuIcons.ts  conversation.ts  conversationSaveAutoFix.ts  devModeFallbacks.ts  directFileOpener.ts  directFileOpenerCore.ts  directFileOpenerHandlers.ts  directFileOpenerUtils.ts  explorerFilterAddon.ts  explorerLoadingState.ts  explorerManager.ts  fastAutoApply.ts  fileDialog.ts  fileHandler.ts  fileOperations.ts  (+49 more)
src-tauri/: Cargo.toml  ai_conversations.json  build_commands.rs  default.json  python.py  system_info.ts  tauri.conf.json  tree.txt  undefined
src-tauri/src/: android_commands.rs  arduino_commands.rs  build_commands.rs  git_commands.rs  ide_script_commands.rs  ide_script_commands_v2.rs  lib.rs  license_commands.rs  main.rs  nvidia_commands.rs  nvidia_commands.rs.private_backup  pi_remote_commands.rs  safety_log.json  serial_commands.rs  ssh_manager.rs  ssh_manager.rs.private_backup  stdio.h  stdlib.h  surgical_backup_commands.rs  surgical_edit_commands.rs  surgical_edit_commands.rs.private_backup  svn_commands.rs  system_info.rs  tree.txt  unified_backup_commands.rs
(+526 files in other folders)
