[package]
name = "OperatorX02"
version = "0.1.0"
description = "AI Code IDE - Advanced development environment with AI assistance"
authors = ["AI IDE Team"]
edition = "2021"

[lib]
name = "app_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
# Core Tauri - lock to compatible version
# ✅ Added "devtools" feature to enable DevTools in production builds
tauri = { version = "2.6", features = ["devtools"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System utilities
dirs = "5.0.1"
hostname = "0.3.1"

# Process management for build system
lazy_static = "1.4"

# HTTP client for AI API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }

# Arduino Integration - Serial port communication
serialport = "4.3"

# Tauri plugins - compatible with tauri 2.6
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-deep-link = "2.0"

# Single instance plugin - prevents multiple windows
tauri-plugin-single-instance = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
incremental = true
