[package]
name = "OperatorX02"
version = "0.1.0"
description = "AI Code IDE - Advanced development environment with AI assistance"
authors = ["AI IDE Team"]
edition = "2021"

[lib]
name = "app_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2.6", features = ["devtools"] }
russh       = "0.44"
russh-keys  = "0.44"
russh-sftp  = "2.0"
async-trait = "0.1"
chrono = "0.4"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs     = "5.0.1"
hostname = "0.3.1"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1.0", features = ["full"] }
serialport = "4.3"
tauri-plugin-fs            = "2.0"
tauri-plugin-shell         = "2.0"
tauri-plugin-dialog        = "2.0"
tauri-plugin-http          = "2.0"
tauri-plugin-opener        = "2.0"
tauri-plugin-deep-link     = "2.0"
tauri-plugin-single-instance = "2"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1

[profile.dev]
incremental = true

